examples/test/testpolicy6125.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6125
  namespace: namespace296
spec:
  podSelector:
    matchLabels:
      key45: value17
      key24: value8
      key7: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key20: value9
          key43: value9
          key34: value36
      podSelector:
        matchLabels:
          key1: value2
          key0: value13
          key2: value12
